--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <section class="header">
-    <img src="https://s3-us-west-1.amazonaws.com/co-directory-images/peterpillsbury.jpg";>
+  hello
 </section>
 <section class="colorPalette">
   <h1 id="pageTopic">UPS styleguide</h1>
