--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UPS Style Guide</title>
+  <title>Peter Pillsbury</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
