--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   hello
 </section>
 <section class="colorPalette">
-  <h1 id="pageTopic">UPS styleguide</h1>
+  <h1 id="pageTopic">Peter Pillsbury</h1>
   <h2 class="sectionHead">Primary Colors</h2>
   <div class="colorContainer">
     <div class="swatch darkBlue"></div>
