--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> </spa
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="about-desc">
 								<span class="heading-meta">Welcome &amp; Introduce</span>
-								<h3>Hola! my name is Louie Jie!</h3>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+								<h3>Hello! my name is Peter!</h3>
+								<p>Principal, Product Manager at Core Logic & Part-time UX/UI+Code Bootcamp Instructor at UC Irvine. Prior to Core Logic was the Senior UX/UI Product Director / Creative Director for Real Estate Digital in charge of media and data solutions to real estate franchisors, brokerages, agents and MLS organizations and associations. Berkshire Hathaway Home Services, Long & Foster, ReeceNichols, Homeseekers, Bank of America & MRIS, Xome, Mr Cooper just to name a few. Before that, Cedars-Sinai Medical Center, as the Head of User Experience, leading a team of health care IT professionals through the daily tasks of developing multiple web based applications servicing over 14,000 employees as well as public users.
+							 
+									24/7 in-house creative genius. A facilitator that comes up with numerous creative ideas that can be applied to any product, service or situation while using the latest technology & media trends.
+									
+									Specialties: I live for the experience and always offer a "Balanced Solution". I Understand and work hard to meet the needs of the User Advocate, the Development Advocate & the Business Advocate. </p>
 							</div>
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
