--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Work Template</title>
+	<title>Peter Pillsbury</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -61,9 +61,8 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
+				<p><small>
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> </span> <span><a href="https://www.linkedin.com/in/peterpillsbury/" target="_blank">peter pillsbury</a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -86,8 +85,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="about-desc">
 								<span class="heading-meta">Welcome &amp; Introduce</span>
-								<h3>Hola! my name is Louie Jie!</h3>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+								<h3>Hello! my name is Peter!</h3>
+								<p>Principal, Product Manager at Core Logic & Part-time UX/UI+Code Bootcamp Instructor at UC Irvine.
+
+									Prior to Core Logic was the Senior UX/UI Product Director / Creative Director for Real Estate Digital in charge of media and data solutions to real estate franchisors, brokerages, agents and MLS organizations and associations. Berkshire Hathaway Home Services, Long & Foster, ReeceNichols, Homeseekers, Bank of America & MRIS, Xome, Mr Cooper just to name a few. Before that, Cedars-Sinai Medical Center, as the Head of User Experience, leading a team of health care IT professionals through the daily tasks of developing multiple web based applications servicing over 14,000 employees as well as public users.
+									
+									24/7 in-house creative genius. A facilitator that comes up with numerous creative ideas that can be applied to any product, service or situation while using the latest technology & media trends.
+									
+									Specialties: I live for the experience and always offer a "Balanced Solution". I Understand and work hard to meet the needs of the User Advocate, the Development Advocate & the Business Advocate. </p>
 							</div>
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
