--- a/work.html
+++ b/work.html
@@ -48,15 +48,11 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html"><span>Wo</span><span>rk</span></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><span>Pet</span><span>erP</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="colorlib-active"><a href="work.html">Work</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -230,7 +226,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn btn-primary btn-learn">Contact me!</a></p>
+							<p><a href="mailto:peterpillsbury@cox.net" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
 					</div>
