update homepage title
title and first hero

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> </spa
 					   			<div class="col-md-8 col-md-offset-2 col-md-pull-2 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>UX/UI & Product as One</h1>
+						   					<h1>UX/UI Professional</h1>
 						   					<h2>High social impact made by Peter <a href="#" target="_blank">link to something</a></h2>
 												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
 											</div>
